♻️ refactor(server): 优化包结构，框架基础设施统一到 framework 包
- WebMvcConfig → framework/config/
- WebSocketConfig, WebSocketAuthConfig, RoomManager → framework/websocket/
- 删除空的 config/ 包